--- a/sheety/build.gradle
+++ b/sheety/build.gradle
@@ -31,7 +31,7 @@ android {
         multiDexEnabled = true
         vectorDrawables.useSupportLibrary = true
         consumerProguardFiles "consumer-rules.pro"
-}
+    }
 
     buildTypes {
         release {
@@ -53,7 +53,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.2.0'
 }
